Fix: Added missing decoder letter, updated clear btn functionality, adjusted hashtag on demi level and clippy punctionality

--- a/levels/level-sage/level-sage.css
+++ b/levels/level-sage/level-sage.css
@@ -80,6 +80,7 @@ html {
 .bugReportPopUp {
     background-color: lightgrey;
     text-align: center;
+    font-size: 15px;
     padding: 2px;
     font-family: 'Courier New', Courier, monospace;
     width: 80px;
